Improve settings item button styles (#1155)
* Improve styles for settings-item-button

* Add hover/active styles to settings-item-button

* Use consistent phrasing for setting buttons and include ellipsis

--- a/ext/bg/settings2.html
+++ b/ext/bg/settings2.html
@@ -97,7 +97,7 @@
         </div></div>
         <div class="settings-item settings-item-button" data-modal-action="show,profiles"><div class="settings-item-inner">
             <div class="settings-item-left">
-                <div class="settings-item-label">Adjust profiles</div>
+                <div class="settings-item-label">Configure profiles&hellip;</div>
             </div>
             <div class="settings-item-right open-panel-button-container">
                 <button class="icon-button"><span class="icon-button-inner"><span class="icon" data-icon="material-right-arrow"></span></span></button>
@@ -112,7 +112,7 @@
     <div class="settings-group">
         <div class="settings-item settings-item-button" data-modal-action="show,dictionaries"><div class="settings-item-inner">
             <div class="settings-item-left">
-                <div class="settings-item-label">Configure installed and enabled dictionaries</div>
+                <div class="settings-item-label">Configure installed and enabled dictionaries&hellip;</div>
             </div>
             <div class="settings-item-right open-panel-button-container">
                 <button class="icon-button"><span class="icon-button-inner"><span class="icon" data-icon="material-right-arrow"></span></span></button>
@@ -258,7 +258,7 @@
                 </div></div>
                 <div class="settings-item settings-item-button" data-modal-action="show,secondary-search-dictionaries"><div class="settings-item-inner">
                     <div class="settings-item-left">
-                        <div class="settings-item-label">Secondary dictionaries</div>
+                        <div class="settings-item-label">Secondary dictionaries&hellip;</div>
                     </div>
                     <div class="settings-item-right open-panel-button-container">
                         <button class="icon-button"><span class="icon-button-inner"><span class="icon" data-icon="material-right-arrow"></span></span></button>
@@ -576,7 +576,7 @@
         </div>
         <div class="settings-item settings-item-button" data-modal-action="show,custom-css"><div class="settings-item-inner">
             <div class="settings-item-left">
-                <div class="settings-item-label">Custom CSS</div>
+                <div class="settings-item-label">Configure custom CSS&hellip;</div>
             </div>
             <div class="settings-item-right open-panel-button-container">
                 <button class="icon-button"><span class="icon-button-inner"><span class="icon" data-icon="material-right-arrow"></span></span></button>
@@ -797,7 +797,7 @@
         </div></div>
         <div class="settings-item settings-item-button" data-modal-action="show,audio-sources"><div class="settings-item-inner">
             <div class="settings-item-left">
-                <div class="settings-item-label">Audio playback sources</div>
+                <div class="settings-item-label">Configure audio playback sources&hellip;</div>
             </div>
             <div class="settings-item-right open-panel-button-container">
                 <button class="icon-button"><span class="icon-button-inner"><span class="icon" data-icon="material-right-arrow"></span></span></button>
@@ -848,7 +848,7 @@
         </div></div>
         <div class="settings-item settings-item-button advanced-only" data-modal-action="show,scanning-inputs"><div class="settings-item-inner">
             <div class="settings-item-left">
-                <div class="settings-item-label">Configure advanced scanning inputs <span class="light no-wrap">(<span class="scanning-input-count">#</span> defined)</span></div>
+                <div class="settings-item-label">Configure advanced scanning inputs&hellip; <span class="light no-wrap">(<span class="scanning-input-count">#</span> defined)</span></div>
             </div>
             <div class="settings-item-right open-panel-button-container">
                 <button class="icon-button"><span class="icon-button-inner"><span class="icon" data-icon="material-right-arrow"></span></span></button>
@@ -965,7 +965,7 @@
         </div></div>
         <div class="settings-item settings-item-button advanced-only" data-modal-action="show,input-action-prevention"><div class="settings-item-inner">
             <div class="settings-item-left">
-                <div class="settings-item-label">Configure input action prevention</div>
+                <div class="settings-item-label">Configure input action prevention&hellip;</div>
             </div>
             <div class="settings-item-right open-panel-button-container">
                 <button class="icon-button"><span class="icon-button-inner"><span class="icon" data-icon="material-right-arrow"></span></span></button>
@@ -1318,7 +1318,7 @@
         </div>
         <div class="settings-item settings-item-button" data-modal-action="show,anki-cards"><div class="settings-item-inner">
             <div class="settings-item-left">
-                <div class="settings-item-label">Configure Anki card format</div>
+                <div class="settings-item-label">Configure Anki card format&hellip;</div>
             </div>
             <div class="settings-item-right open-panel-button-container">
                 <button class="icon-button"><span class="icon-button-inner"><span class="icon" data-icon="material-right-arrow"></span></span></button>
@@ -1326,7 +1326,7 @@
         </div></div>
         <div class="settings-item settings-item-button advanced-only" data-modal-action="show,anki-card-templates"><div class="settings-item-inner">
             <div class="settings-item-left">
-                <div class="settings-item-label">Configure Anki card templates</div>
+                <div class="settings-item-label">Configure Anki card templates&hellip;</div>
             </div>
             <div class="settings-item-right open-panel-button-container">
                 <button class="icon-button"><span class="icon-button-inner"><span class="icon" data-icon="material-right-arrow"></span></span></button>
