Improve document focus control (#1167)
* Improve styles for #content-scroll-focus

* Create new class to manage and control document focus

* Use new focus class

* Add a check to prevent redundant .blur calls

--- a/ext/bg/info.html
+++ b/ext/bg/info.html
@@ -62,6 +62,7 @@
 <script src="/mixed/js/comm.js"></script>
 <script src="/mixed/js/api.js"></script>
 
+<script src="/mixed/js/document-focus-controller.js"></script>
 <script src="/mixed/js/html-template-collection.js"></script>
 <script src="/bg/js/settings/settings-controller.js"></script>
 <script src="/bg/js/settings/backup-controller.js"></script>
