--- a/ext/bg/legal.html
+++ b/ext/bg/legal.html
@@ -224,6 +224,8 @@ THE SOFTWARE.
 </div></div>
 
 <!-- Scripts -->
+<script src="/mixed/js/document-focus-controller.js"></script>
+
 <script src="/bg/js/generic-page-main.js"></script>
 
 </body>
