--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -79,6 +79,7 @@
 <script src="/mixed/js/japanese.js"></script>
 
 <script src="/mixed/js/cache-map.js"></script>
+<script src="/mixed/js/document-focus-controller.js"></script>
 <script src="/mixed/js/document-util.js"></script>
 <script src="/fg/js/dom-text-scanner.js"></script>
 <script src="/fg/js/text-source-range.js"></script>
