--- a/ext/bg/settings2.html
+++ b/ext/bg/settings2.html
@@ -2555,6 +2555,7 @@
 <script src="/mixed/js/audio-system.js"></script>
 <script src="/mixed/js/cache-map.js"></script>
 <script src="/mixed/js/dictionary-data-util.js"></script>
+<script src="/mixed/js/document-focus-controller.js"></script>
 <script src="/mixed/js/document-util.js"></script>
 <script src="/mixed/js/dom-data-binder.js"></script>
 <script src="/mixed/js/html-template-collection.js"></script>
