--- a/ext/bg/permissions.html
+++ b/ext/bg/permissions.html
@@ -138,6 +138,8 @@
 <script src="/mixed/js/comm.js"></script>
 <script src="/mixed/js/api.js"></script>
 
+<script src="/mixed/js/document-focus-controller.js"></script>
+
 <script src="/bg/js/permissions-main.js"></script>
 
 </body>
