--- a/ext/bg/welcome.html
+++ b/ext/bg/welcome.html
@@ -334,6 +334,7 @@
 <script src="/mixed/js/api.js"></script>
 
 <script src="/mixed/js/cache-map.js"></script>
+<script src="/mixed/js/document-focus-controller.js"></script>
 <script src="/mixed/js/document-util.js"></script>
 <script src="/mixed/js/dom-data-binder.js"></script>
 <script src="/mixed/js/html-template-collection.js"></script>
