--- a/ext/fg/float.html
+++ b/ext/fg/float.html
@@ -95,6 +95,7 @@
 <script src="/mixed/js/display-generator.js"></script>
 <script src="/mixed/js/display-history.js"></script>
 <script src="/mixed/js/display-notification.js"></script>
+<script src="/mixed/js/document-focus-controller.js"></script>
 <script src="/mixed/js/dynamic-loader.js"></script>
 <script src="/mixed/js/frame-endpoint.js"></script>
 <script src="/mixed/js/media-loader.js"></script>
